# pgmoneta_mcp

./: AUTHORS  Cargo.toml  README.md
.github/workflows/: ci.yml
doc/: CONFIGURATION.md  DEVELOPERS.md  GETTING_STARTED.md  LOCAL_LLM.md  MIGRATION.md  TEST.md
doc/manual/en/: 00-frontpage.md  03-quickstart.md  20-llm.md  21-ollama.md  76-test.md  80-security-api.md  81-client-api.md  97-acknowledgement.md
src/: agent.rs  client.rs  compression.rs  configuration.rs  constant.rs  handler.rs  lib.rs  security.rs
src/llm/: mod.rs  ollama.rs
test/: check.sh
test/test-suite/: Dockerfile
tests/common/: mod.rs
