[package]
name = "pgmoneta-mcp"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Haoran Zhang <andrewzhr9911@gmail.com>", "Jesper Pedersen <jesperpedersen.db@gmail.com>"]
description = "MCP server for pgmoneta"

[[bin]]
name = "pgmoneta-mcp-server"
path = "src/bin/server.rs"

[[bin]]
name = "pgmoneta-mcp-admin"
path = "src/bin/admin.rs"

[dependencies]
tokio = {version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
rmcp = { version = "1.2", features = [
    "server",
    "macros",
    "client",
    "transport-io",
    "transport-streamable-http-server",
    "transport-streamable-http-client-reqwest",
    "auth",
    "elicitation",
    "schemars",
] }
anyhow = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
    "chrono"
] }
axum = { version = "0.8", features = ["macros"] }
config = { version = "0.15", features = ["yaml"] }
base64 = "0.22.1"
home = "0.5.11"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
hmac = "0.12.1"
rand = "0.9.1"
aes-gcm = "0.10.3"
flate2 = "1.0"
zstd = "0.13"
lz4 = "1.24"
bzip2 = "0.4"
aes = { version = "0.8", features = ["hazmat"] }
zeroize = "1.8.2"
scram = { package = "scram-2", version = "0.7.0" }
once_cell = "1.21.3"
clap = { version = "4.5.53", features = ["derive"] }
chrono = "0.4.42"
rpassword = "7.4.0"
serde_ini = "0.2.0"
tracing-appender = "0.2.4"
syslog-tracing = "0.3.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(windows)'.dependencies]
winlog2 = "0.3.2"
log = "0.4"

[[test]]
name = "info_test"
path = "tests/info_test.rs"

[[test]]
name = "list_backup_test"
path = "tests/list_backup_test.rs"